--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "keyboard_parts.pretty"]
-	path = keyboard_parts.pretty
-	url = https://github.com/tmk/keyboard_parts.pretty.git
 [submodule "ProMicroKiCad"]
 	path = ProMicroKiCad
 	url = https://github.com/ai03-2725/ProMicroKiCad.git
@@ -19,3 +16,6 @@
 [submodule "Keebio-Parts.pretty"]
 	path = Keebio-Parts.pretty
 	url = https://github.com/keebio/Keebio-Parts.pretty.git
+[submodule "keyboard_parts.pretty"]
+	path = keyboard_parts.pretty
+	url = https://github.com/colemarkham/keyboard_parts.pretty.git
